Write for Mark/Unmark Task