@@ -8,6 +8,7 @@ import static seedu.address.testutil.TypicalPersons.getTypicalAddressBook;
 
 import java.util.Arrays;
 import java.util.HashSet;
+import java.util.List;
 import java.util.Set;
 
 import org.junit.jupiter.api.Test;
@@ -27,13 +28,13 @@ import seedu.address.model.wedding.WeddingName;
 
 public class UntagCommandTest {
 
-    private Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
+    private final Model model = new ModelManager(getTypicalAddressBook(), new UserPrefs());
 
 
     @Test
     public void execute_validTagsUnfilteredList_success() {
         Person personToEdit = model.getFilteredPersonList().get(INDEX_FIRST.getZeroBased());
-        HashSet<Tag> tagsToRemove = new HashSet<>(Arrays.asList(new Tag(new TagName("friends"))));
+        HashSet<Tag> tagsToRemove = new HashSet<>(List.of(new Tag(new TagName("friends"))));
 
         UntagCommand untagCommand = new UntagCommand(INDEX_FIRST, tagsToRemove);
 
@@ -95,7 +96,7 @@ public class UntagCommandTest {
 
     @Test
     public void execute_nonExistentTag_failure() {
-        HashSet<Tag> tagsToRemove = new HashSet<>(Arrays.asList(new Tag(new TagName("nonExistentTag"))));
+        HashSet<Tag> tagsToRemove = new HashSet<>(List.of(new Tag(new TagName("nonExistentTag"))));
         UntagCommand untagCommand = new UntagCommand(INDEX_FIRST, tagsToRemove);
         String expectedMessage = Messages.MESSAGE_TAG_NOT_FOUND_IN_CONTACT;
         CommandTestUtil.assertCommandFailure(untagCommand, model, expectedMessage);
@@ -109,9 +110,7 @@ public class UntagCommandTest {
         UntagCommandParser parser = new UntagCommandParser();
 
         String expectedMessage = String.format(MESSAGE_INVALID_COMMAND_FORMAT, UntagCommand.MESSAGE_USAGE);
-        assertThrows(ParseException.class, expectedMessage, () -> {
-            parser.parse(userInput);
-        });
+        assertThrows(ParseException.class, expectedMessage, () -> parser.parse(userInput));
 
     }
 
@@ -119,11 +118,12 @@ public class UntagCommandTest {
     @Test
     public void execute_invalidIndexUnfilteredList_failure() {
         Index outOfBoundIndex = Index.fromOneBased(model.getFilteredPersonList().size() + 1);
-        HashSet<Tag> tagsToRemove = new HashSet<>(Arrays.asList(new Tag(new TagName("friends"))));
+        HashSet<Tag> tagsToRemove = new HashSet<>(List.of(new Tag(new TagName("friends"))));
 
         UntagCommand untagCommand = new UntagCommand(outOfBoundIndex, tagsToRemove);
 
-        String expectedMessage = Messages.MESSAGE_INVALID_PERSON_DISPLAYED_INDEX;
+        String expectedMessage = String.format(Messages.MESSAGE_INVALID_PERSON_DISPLAYED_INDEX,
+                1, model.getFilteredPersonList().size());
 
         CommandTestUtil.assertCommandFailure(untagCommand, model, expectedMessage);
     }
@@ -143,7 +143,7 @@ public class UntagCommandTest {
         );
 
         model.setPerson(model.getFilteredPersonList().get(INDEX_SECOND.getZeroBased()), personWithoutTags);
-        HashSet<Tag> tagsToRemove = new HashSet<>(Arrays.asList(new Tag(new TagName("friends"))));
+        HashSet<Tag> tagsToRemove = new HashSet<>(List.of(new Tag(new TagName("friends"))));
         UntagCommand untagCommand = new UntagCommand(INDEX_SECOND, tagsToRemove);
         String expectedMessage = Messages.MESSAGE_TAG_NOT_FOUND_IN_CONTACT;
 
